--- a/app/src/main/res/layout/card_eta_classic.xml
+++ b/app/src/main/res/layout/card_eta_classic.xml
@@ -78,6 +78,7 @@
                 android:id="@+id/stopNameTv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:gravity="center_vertical"
                 android:maxLines="1"
                 android:text="@string/demo_card_stop_name"
                 android:textSize="20sp"
