--- a/app/src/main/res/layout/content_eta_classic.xml
+++ b/app/src/main/res/layout/content_eta_classic.xml
@@ -30,7 +30,6 @@
             android:id="@+id/routeNumberLl"
             android:layout_width="68dp"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -133,7 +132,7 @@
                 android:textColor="@color/primary"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@id/etaTimeTv"
+                app:layout_constraintBottom_toTopOf="@id/etaTimeRv"
                 app:layout_constraintEnd_toStartOf="@id/etaMinuteUnitTv"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -150,18 +149,19 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/etaMinuteTv" />
 
-            <TextView
-                android:id="@+id/etaTimeTv"
-                android:layout_width="0dp"
+            <hibernate.v2.sunshine.ui.view.TouchDisabledRecyclerView
+                android:id="@+id/etaTimeRv"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical|end"
-                android:maxLines="2"
-                android:text="@string/demo_card_eta_minute_classic_time"
-                android:textSize="14sp"
+                android:orientation="horizontal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/etaMinuteTv" />
+                app:layout_constraintTop_toBottomOf="@id/etaMinuteTv"
+                tools:itemCount="2"
+                tools:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
+                tools:listitem="@layout/item_eta_time" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
