--- a/app/src/main/res/layout/content_eta_classic.xml
+++ b/app/src/main/res/layout/content_eta_classic.xml
@@ -6,82 +6,16 @@
     android:layout_height="wrap_content"
     android:background="@color/background">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/routeNumberLl"
+    <include
+        android:id="@+id/routeNumberContainer"
+        layout="@layout/content_eta_route_number"
         android:layout_width="76dp"
         android:layout_height="0dp"
+        android:paddingStart="8dp"
+        android:paddingEnd="4dp"
         app:layout_constraintBottom_toBottomOf="@id/routeInfoCl"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/routeInfoCl">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/routeBusNumberLl"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <View
-                android:id="@+id/routeCompanyColor"
-                android:layout_width="4dp"
-                android:layout_height="match_parent"
-                android:background="@color/brand_color_kmb"
-                app:layout_constraintEnd_toStartOf="@id/routeBusNumberTv"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <TextView
-                android:id="@+id/routeBusNumberTv"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:layout_marginEnd="4dp"
-                android:gravity="center"
-                android:includeFontPadding="false"
-                android:maxLines="1"
-                android:text="@string/demo_card_route_number"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/routeCompanyColor"
-                app:layout_constraintTop_toTopOf="parent" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <TextView
-            android:id="@+id/routeMTRNumberTv"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginEnd="8dp"
-            android:background="@drawable/bg_route_badge_mtr"
-            android:gravity="center"
-            android:maxLines="1"
-            android:textColor="@color/white"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="1" />
-
-        <TextView
-            android:id="@+id/routeLRTNumberTv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_route_badge_lrt"
-            android:gravity="center"
-            android:maxLines="1"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="614P" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintTop_toTopOf="@id/routeInfoCl" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/routeInfoCl"
@@ -93,7 +27,7 @@
         android:paddingBottom="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/routeNumberLl"
+        app:layout_constraintStart_toEndOf="@id/routeNumberContainer"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
